tests/ui/eii/multiple-default-impls.stderr
error[E0428]: the name `eii1` is defined multiple times
  --> $DIR/multiple-default-impls.rs:9:1
   |
LL | #[eii(eii1)]
   | ------------ previous definition of the macro `eii1` here
...
LL | #[eii(eii1)]
   | ^^^^^^^^^^^^ `eii1` redefined here
   |
   = note: `eii1` must be defined only once in the macro namespace of this module

error: the `main` function cannot be declared in an `extern` block
  --> $DIR/multiple-default-impls.rs:12:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: `eii1` has more than one default implementation which is not supported
  --> $DIR/multiple-default-impls.rs:5:1
   |
LL | #[eii(eii1)]
   | ^^^^^^^^^^^^

error: `#[eii1]` required, but not found
  --> $DIR/multiple-default-impls.rs:9:1
   |
LL | #[eii(eii1)]
   | ^^^^^^^^^^^^ expected because `#[eii1]` was declared here in crate `multiple_default_impls`
   |
   = help: expected at least one implementation in crate `multiple_default_impls` or any of its dependencies

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0428`.
